# ai-tracks-studio-react-fastapi

./: .gitignore  CHANGED.md  ENV_SETUP.md  PRODUCTION_DEPLOYMENT.md  README.md
backend/: .gitignore  ABOUT_US_SETUP.md  ADD_EDIT_ARCHITECTURE.md  ADMIN_SYSTEM.md  ADMIN_UI_GUIDE.md  API_DOCUMENTATION.md  AUTO_MIGRATION.md  BOOTSTRAP_GUIDE.md  DEBUG_BACKEND_FRONTEND_MIX.md  DEPLOYMENT.md  DEPLOY_WORKING_SERVICE.md  EMAIL_SETUP.md  FINAL_ARCHITECTURE.md  FIX_STATIC_FILES_404.md  GETTING_STARTED.md  IMAGE_UPLOAD_GUIDE.md  IMAGE_UPLOAD_UUID7.md  MIGRATE_STATIC_DIR.md  MIGRATION_GUIDE.md  PRODUCTION_DEPLOY.md  PYTHON_3.14_NOTES.md  QUICK_FIX.md  README.md  RESTART_GUIDE.md  RWD_DESIGN.md  SUMMARY.md  SWITCH_PYTHON_VERSION_UV.md  SWITCH_TO_PYTHON_3.12.md  SYSTEMD_SETUP.md  TEMPLATE_SYSTEM.md  UPLOADS_GITIGNORE.md  check_python_compatibility.sh  check_static_files.sh  diagnose.sh  migrate_add_feedback.py  migrate_add_feedback.sql  migrate_add_views.py  migrate_add_views.sql  migrate_image_columns.sql  migrate_longtext.sql  (+15 more)
backend/app/: __init__.py  config.py  database.py  db_migrate.py  dependencies.py  init_admin.py  main.py
backend/app/core/: __init__.py  captcha.py  email.py  security.py
backend/app/models/: __init__.py  about.py  banner.py  feedback.py  news.py  project.py  user.py
backend/app/repositories/: __init__.py  about.py  banner.py  base.py  feedback.py  news.py  project.py
backend/app/routers/: __init__.py  about.py  banner.py  feedback.py  news.py  projects.py
backend/app/schemas/: __init__.py  about.py  news.py  (+3 more)
backend/static/: admin.html  login.html
(+82 files in other folders)
