[project]
name = "studio-api"
version = "0.1.0"
description = "FastAPI backend for AI-Tracks Studio"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "gunicorn>=23.0.0",
]
