[project]
name = "studio-api"
version = "0.1.0"
description = "FastAPI backend for AI-Tracks Studio"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "pymysql>=1.1.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "gunicorn>=23.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.20",
    "itsdangerous>=2.2.0",
    "email-validator>=2.3.0",
    "pillow>=12.0.0",
]
